# PY_WDP

./: hello.py  pyproject.toml  pyproject_old.toml  taskfile.yaml
.devcontainer/task_extract/: devcontainer.json
.devcontainer/task_load/: dockerfile
.devcontainer/task_transform/: dockerfile
configs/task_extract/: base.yaml
secrets/task_extract/: base.yaml
src/task_extract/: __main__.py  extract.py
tests/task_extract/: Test loading failed: Error: Error occurr  test_extract.py
